Fix overflowing

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 /* Utilities Classes */
 .container{
-    width: 1100px;
+    max-width: 1080px;
     margin: 0 auto;
 }
 h2 {
